# nekoLyrics

./: .gitignore  ar.json  build.js  de.json  en.json  es.json  eslint.config.mjs  fr.json  it.json  ja.json  ko.json  manifest.json  package-lock.json  package.json  pl.json  pt.json  readme.md  ru.json  zh_CN.json  zh_HK.json
plugin/: SongStorage.js  index.js  main.js
plugin/utils/: hybridSearch.js  lyricsAnimator.js  lyricsCache.js  lyricsParser.js  mediaBridge.js  metadataCleaner.js  plugin.js  systemFontFetcher.js
propertyInspector/lyrics/: index.html  index.js
propertyInspector/utils/: action.js  axios.js  common.js
windows-bridge-src/: CMakeLists.txt  MediaBridge.csproj  Program.cs  main.cpp
